--- a/services/api/package.json
+++ b/services/api/package.json
@@ -27,6 +27,7 @@
   "dependencies": {
     "@microrealestate/common": "*",
     "axios": "1.7.4",
+    "http-proxy-middleware": "2.0.6",
     "i18n": "0.13.3",
     "jsonwebtoken": "9.0.0",
     "lodash": "4.17.21",
