--- a/services/api/package.json
+++ b/services/api/package.json
@@ -29,7 +29,7 @@
     "axios": "1.7.4",
     "http-proxy-middleware": "2.0.6",
     "i18n": "0.13.3",
-    "json2csv": "^6.0.0-alpha.2",
+    "json2csv": "5.0.7",
     "jsonwebtoken": "9.0.0",
     "lodash": "4.17.21",
     "moment": "2.29.4",
