--- a/services/api/package.json
+++ b/services/api/package.json
@@ -27,6 +27,7 @@
   "dependencies": {
     "@microrealestate/common": "*",
     "axios": "1.7.4",
+    "form-data": "4.0.0",
     "http-proxy-middleware": "2.0.6",
     "i18n": "0.13.3",
     "json2csv": "5.0.7",
@@ -34,6 +35,7 @@
     "lodash": "4.17.21",
     "moment": "2.29.4",
     "mongobackup": "0.3.5",
+    "multer": "1.4.5-lts.1",
     "nanoid": "5.0.7"
   },
   "devDependencies": {
