--- a/services/paymentprocessor/Dockerfile
+++ b/services/paymentprocessor/Dockerfile
@@ -2,6 +2,15 @@ FROM python:3.11-slim
 
 WORKDIR /app
 
+# Install required system dependencies
+RUN apt-get update && apt-get install -y --no-install-recommends \
+    gcc \
+    python3-dev \
+    libpq-dev \
+    build-essential && \
+    apt-get clean && \
+    rm -rf /var/lib/apt/lists/*
+
 COPY services/paymentprocessor/requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
